re PR fortran/39576 (gcc/fortran/error.c's error.c missing "break")

PR fortran/39576
	* error.c (error_print): Add missing break statement.

From-SVN: r147257